2000-11-01  Ezra Peisach  <epeisach@mit.edu>

	* configure.in: Use AC_CHECK_FUNCS, AC_CHECK_HEADERS, AC_C_CONST
	instead of the older names AC_HAVE_FUNCS, AC_HEADER_CHECK,
	AC_CONST. Consolidate use of function testing macros.

2000-03-24  Ken Raeburn  <raeburn@mit.edu>

	* configure.in: Check for alpha*-dec-osf* instead of
	alpha-dec-osf*.

1999-10-26  Wilfredo Sanchez  <tritan@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup.

1999-04-13    <tytso@rsts-11.mit.edu>

	* configure.in: Check to see if we need to pull in the util
		library in order to find logwtmp().  (Needed for
		Linux/glibc 2.1.)

Wed Mar 24 17:14:06 1999  Tom Yu  <tlyu@mit.edu>

	* configure.in: Check for sys/sockio.h for systems that need it
	for SIOCATMARK.

Thu Feb 18 18:35:00 1999  Tom Yu  <tlyu@mit.edu>

	* configure.in: Add check for setluid.

1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

1998-05-27  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* configure.in: Add check for paths.h

Fri Apr 10 22:52:41 1998  Tom Yu  <tlyu@mit.edu>

	* configure.in: Add CHECK_SETJMP and CHECK_SIGNALS.

Wed Feb 18 15:28:07 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Sat Feb 14 10:34:26 1998  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Remove USE_ANAME

Fri Feb 13 15:31:26 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define LOCAL_SUBDIRS to recurse into the
		ftp and ftpd subdirectories.

	* configure.in: Create the makefiles for all of the subdirectories
		and move all of the configure.in tests from the
		subdirectories into this configure.in.
	