@@ -35,8 +35,11 @@ extern Key_schedule schedule;
 #include <netinet/in.h>
 #include <errno.h>
 
+#ifndef HAVE_STRERROR
+#define strerror(error) (sys_errlist[error])
 #ifdef NEED_SYS_ERRLIST
 extern char *sys_errlist[];
+#endif
 #endif
 
 #if (SIZEOF_SHORT == 4)
@@ -248,7 +251,7 @@ unsigned int nbyte;
 		} else {
 			bufsize = 0;
 			secure_error("%s (in malloc of PROT buffer)",
-				     sys_errlist[errno]);
+				     strerror(errno));
 			return(ERR);
 		}
 	}
@@ -295,7 +298,7 @@ unsigned int nbyte;
 			} else {
 				bufsize = 0;
 				secure_error("%s (in malloc of PROT buffer)",
-					     sys_errlist[errno]);
+					     strerror(errno));
 				return(ERR);
 			}
 		}
@@ -326,7 +329,7 @@ int fd;
 				!= sizeof(length)) {
 			secure_error("Couldn't read PROT buffer length: %d/%s",
 				     kerror,
-				     kerror == -1 ? sys_errlist[errno]
+				     kerror == -1 ? strerror(errno)
 				     : "premature EOF");
 			return(ERR);
 		}
@@ -338,7 +341,7 @@ int fd;
 		if ((kerror = looping_read(fd, (char *) ucbuf, (int) length)) != length) {
 			secure_error("Couldn't read %u byte PROT buffer: %s",
 					length, kerror == -1 ?
-					sys_errlist[errno] : "premature EOF");
+					strerror(errno) : "premature EOF");
 			return(ERR);
 		}
 		/* Other auth types go here ... */
