@@ -1,3 +1,7 @@
+2001-03-07  Ken Raeburn  <raeburn@mit.edu>
+
+	* configure.in: Check for strerror.
+
 2000-11-01  Ezra Peisach  <epeisach@mit.edu>
 
 	* configure.in: Use AC_CHECK_FUNCS, AC_CHECK_HEADERS, AC_C_CONST
